--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "translate",
-  "version": "2.0.2",
-  "description": "Translate text to different languages on node.js and the browser",
-  "homepage": "https://github.com/franciscop/translate#readme",
-  "repository": "https://github.com/franciscop/translate.git",
-  "bugs": "https://github.com/franciscop/translate/issues",
-  "funding": "https://www.paypal.me/franciscopresencia/19",
-  "author": "Francisco Presencia <public@francisco.io> (https://francisco.io/)",
-  "license": "MIT",
-  "scripts": {
-    "start": "npm run watch # Start ~= Start dev",
-    "build": "rollup src/index.js --name translate --output.format esm | terser --compress --mangle -o index.min.js",
-    "size": "gzip -c index.min.js | wc -c && echo 'bytes' # Only for Unix",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --collectCoverageFrom=src/**/*.js && npx check-dts",
-    "watch": "nodemon --exec \"npm run build && npm test && npm run gzip\" --watch src --watch test --watch webpack.config.js --watch package.json"
+  "name": "@sckt/translate",
+  "version": "1.0.0",
+  "description": "an opinionated API for translator engines (fork of github:franciscop/translate)",
+  "homepage": "https://github.com/Socketlike/translate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Socketlike/translate"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/Socketlike/translate/issues"
+  },
+  "author": "Evelyn <evelynxii.xt@gmail.com> (https://socketlike.github.io/)",
+  "license": "MIT",
   "keywords": [
     "translate",
     "languages",
@@ -24,22 +24,36 @@
     "google",
     "yandex"
   ],
-  "type": "module",
-  "main": "index.min.js",
-  "types": "index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "index.d.ts"
+    "dist/**/*"
   ],
-  "devDependencies": {
-    "check-dts": "^0.7.1",
-    "dotenv": "^16.0.3",
-    "fetch-mock": "^9.11.0",
-    "jest": "^29.5.0",
-    "node-fetch": "^2.6.9",
-    "rollup": "^3.20.2",
-    "terser": "^5.16.9"
+  "scripts": {
+    "build": "node scripts/build.mjs",
+    "check": "tsc --noEmit",
+    "prettier:check": "prettier ./src --check",
+    "eslint:check": "eslint ./src",
+    "prettier:fix": "prettier ./src --write",
+    "eslint:fix": "eslint ./src --fix",
+    "lint": "pnpm run prettier:check && pnpm run eslint:check && pnpm run check",
+    "lint:fix": "pnpm run prettier:fix && pnpm run eslint:fix"
   },
-  "jest": {
-    "transform": {}
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.54.0",
+    "eslint-config-dmitmel": "github:dmitmel/eslint-config-dmitmel",
+    "eslint-plugin-node": "^11.1.0",
+    "iso-639-1": "^3.1.0",
+    "memory-cache": "^0.2.0",
+    "prettier": "^2.8.8",
+    "tsup": "^6.7.0",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/memory-cache": "^0.2.5",
+    "@types/node": "^20.9.2",
+    "type-fest": "^4.8.2"
   }
 }
