fix(lint): fix package error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -105,7 +105,9 @@
       "extends": ["eslint-config-dmitmel/rules/typescript/with-type-checking"],
 
       "rules": {
-        "@typescript-eslint/no-unnecessary-condition": "off"
+        "@typescript-eslint/no-unnecessary-condition": "off",
+
+        "@typescript-eslint/naming-convention": "off"
       },
 
       "parserOptions": {
