chore(workflows/*): update actions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,12 +18,12 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Setup Node
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                   node-version: 18
 
             - name: Setup PNPM
-              uses: pnpm/action-setup@master
+              uses: pnpm/action-setup@v4
               with:
                   version: latest
 
